--- a/index.html
+++ b/index.html
@@ -49,21 +49,23 @@
             </div>
             <div class="input-group f-class">
                 <div>
-                    <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <h5 id="fClass-total">Fast-Class ($150)</h5>
+                    <input id="fClass-count" class="inp-style inp-width" type="number" value="1">
                 </div>
-                <div class="plus-minus-btn">
-                    <p>+ -</p>
+                <div class="input-group number-spinner">
+                    <button onclick="ticketItemChange('fClass', false)" class="btn btn-default"><i class="fas fa-minus"></i>-</button>
+                    <button onclick="ticketItemChange('fClass', true)" class="btn btn-default"><i class="fas fa-plus"></i>+</button>
                 </div>
             </div>
             
             <div class="input-group f-class">
                 <div>
-                    <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <h5 id="economy-total">Economy ($100)</h5>
+                    <input id="economy-count" class="inp-style inp-width" type="number" value="1">
                 </div>
-                <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                <div class="input-group number-spinner">
+                    <button onclick="ticketItemChange('economy', false)" class="btn btn-default"><i class="fas fa-minus"></i>-</button>
+                    <button onclick="ticketItemChange('economy', true)" class="btn btn-default"><i class="fas fa-plus"></i>+</button>
                 </div>
             </div>
             <div class="calculations">
@@ -72,7 +74,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p id="total-price">$00</p>
                     </div>
                 </div>
 
@@ -81,7 +83,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p id="tax-amount">$50</p>
                     </div>
                 </div>
                 <hr>
@@ -90,7 +92,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p id="grand-total">$0</p>
                     </div>
                 </div>
             </div>
@@ -104,6 +106,49 @@
     </section>
 
     <!--Thank You-->
+    <script>
+       function ticketItemChange(ticket, isPlus) {
+            const ticketCount = getInputValue(ticket);
+            let fClassNewCount = ticketCount;
+            if (isPlus == true) {
+                ticketNewCount = ticketCount + 1;
+            }
+            if (isPlus == false && ticketCount > 0) {
+                ticketNewCount = ticketCount - 1;
+            }
+
+            document.getElementById(ticket + '-count').value = ticketNewCount;
+            let ticketTotal = 0;
+            if (ticket == 'fClass') {
+                tickettTotal = ticketNewCount * 150;
+            }
+            if (ticket == 'economy') {
+                ticketTotal = ticketNewCount * 100;
+            }
+            document.getElementById(ticket + '-total').innerText = '$' + ticketTotal;
+            calculateTotal();
+        }
+
+        function calculateTotal() {
+            const fClassInput = getInputValue('fClass');
+            const economyInput = getInputValue('economy');
+
+            const totalPrice = fClassInput * 150 + economyInput * 100;
+            document.getElementById('total-price').innerText = '$' + totalPrice;
+
+            const tax = totalPrice * 0.1;
+            document.getElementById('tax-amount').innerText = '$' + tax;
+
+            let grandTotal = totalPrice + tax;
+            document.getElementById('grand-total').innerText = '$' + grandTotal;
+        }
+
+        function getInputValue(ticket) {
+            const ticketInput = document.getElementById(ticket + '-count');
+            const ticketCount = parseInt(ticketInput.value);
+            return ticketCount;
+        }
+    </script>)
 </body>
 
 </html>
